--- a/client/.gitignore
+++ b/client/.gitignore
@@ -34,3 +34,28 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+ .env
+ # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
+
+# dependencies
+node_modules/
+
+# Expo
+.expo/
+dist/
+web-build/
+expo-env.d.ts
+
+# Native
+*.orig.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+
+# Metro
+.metro-health-check*
+
+# Environment variables
+.env
