--- a/package.json
+++ b/package.json
@@ -3,31 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "@react-native-masked-view/masked-view": "0.3.2",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/native-stack": "^7.2.0",
-    "@react-navigation/stack": "^7.1.1",
-    "expo": "~52.0.23",
-    "expo-status-bar": "~2.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.5",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.14.1",
-    "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kaeytee/DietApp.git"
   },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.3.12",
-    "typescript": "^5.3.3"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/Kaeytee/DietApp/issues"
   },
-  "private": true
+  "homepage": "https://github.com/Kaeytee/DietApp#readme",
+  "description": ""
 }
